css/section.styl
.home
    height 100vh
.main
    overflow hidden
#homeImage
    background-image: url("https://i.imgur.com/bnJHhVC.png")
    background-repeat: no-repeat
    background-color #052600
    filter blur(1px) brightness(50%)
    z-index 0
    margin-top: -20px 
    margin-left: -10px
    width: auto ;
    height: 100% ;

.main-section 
    position: absolute;
    left: 0;
    top: 50%;
    transform: translate(0, -50%);
    width: 100%;
.heading-text
    text-align: center;
    font-size: 1.8em;
    color: white

.main-section h1 
    font-size: 2.5em

#About
    background-color: #1d2112
    height: 33vh
    margin-top -1px
#heading-about h1
    text-align: center
    padding 20px 0 20px 0

.about-section
    display flex
    justify-content: space-around
    flex-direction row
    background-color: #1c2119
    height 100%


.about-item
    margin: 10px 20px 10px 20px
    background-color: #627087
    flex-basis: auto
    color: #fff
    display: flex
    flex-direction: column
    justify-content: center
    opacity 0.4
    transition opacity 0.5s
    &:hover
        opacity 1
    & h3
        text-align: center
    & p
        margin: 40px 40px 40px 40px
    
.contact
    background-color: #333a47
    color: white
    height 15vh    

.contact-section-wrapper
    flex-grow: 1
    display flex
    justify-content: space-evenly
    height: 100%
    & .heading
        font-size: 1.3em
        height: 100%
        display: flex;
        justify-content: center;
        align-items: center;  
        
.contact-icons
    display: flex
    height: 100%
    align-items: center

@media screen and (max-width: 600px) 
    .contact-section-wrapper .heading
        display: none
    
    .contact-icons
        flex-grow: 1
        display flex
        justify-content: space-evenly

    
    .contact-section-wrapper
        width: 100%
    

.icon
    margin 0px 10px 0px 10px
    opacity 0.5
    transition: opacity 0.3s
    &:hover
        opacity 1
#MyStuff
    background-color: #000816
    display: flex;
    flex: 1;
    flex-direction: column;
    font-size: 1.3em
    & h1
        text-align: center
        margin-top: 0
        margin-bottom: 0
        padding-top: 25px
    
.mystuff-flexbox
    display flex
    justify-content: space-around
    flex-wrap: wrap
    margin: 100px 300px 0 300px


.mystuff-item
    overflow: hidden;
    width: 300px
    background-color: black
    margin: 20px
    height 300px
    text-align: center
    border: black solid 2px
    position relative
    & img 
        height 100%
        max-width: 100%;
        transition: all 0.3s;
        position relative
        filter: blur(3px) brightness(50%)
        &:hover
            transform: scale(1.1) 
            filter blur(0) brightness(100%)
    
.mystuff-item-content
    position absolute
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.3em
    font-family: "Impact"


    

